add social networks

--- a/index.html
+++ b/index.html
@@ -519,19 +519,20 @@
 
             <div class="row">
                 <div class="col-md-12 contact" id="contact">
-                    <a href="https://www.instagram.com/leomarques.eng/" class="fa fa-instagram"></a>
-                    <a href="https://www.youtube.com/c/descomplicaqgis" class="fa fa-youtube"></a>
-                    <a href="https://api.whatsapp.com/send?phone=5511958688143" class="fa fa-whatsapp"></a>
+                    
                 </div>
             </div>
 
     <div class="row">
         <div class="col-md-12 footer">
             <footer>
-                </p>
+                <p class="footerText">
                     <b>Descomplica QGIS. Todos os direitos reservados. © 2020</b></br>
                     CNPJ: 27.405.408/0001-08
                 </p>
+                <a href="https://www.instagram.com/leomarques.eng/" class="fa fa-instagram"></a>
+                <a href="https://www.youtube.com/c/descomplicaqgis" class="fa fa-youtube"></a>
+                <a href="https://api.whatsapp.com/send?phone=5511958688143" class="fa fa-whatsapp"></a>
             </footer>
         </div>
     </div>
