--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                 <li><a class="nav-item" href="#estrutura">Estrutura do Curso</a></li>
                 <li><a class="nav-item" href="#instrutor">Instrutor</a></li>
                 <li><a class="nav-item" href="#faq">Perguntas Frequentes</a></li>
-                <li><a class="nav-item" href="#contact">Contato</a></li>
               </ul>
             </div>
           </nav>
@@ -85,10 +84,10 @@
         </div>
 
         <div class="row greenBackground">
-            <div class="col-md-6" id="mapImage">
+            <div class="col-md-6 introSection">
                 <img src="img/banner2.jpg" class="map">
             </div>
-            <div class="col-md-6" id="mapsText">
+            <div class="col-md-6 introSection">
                 <h1 class="defaultTitle">VOCÊ SE CONSIDERA INDEPENDENTE NA PRODUÇÃO DE MAPAS?</h1>
                 <p class="mapDescription">
                     Imagine a seguinte situação:</br></br>
@@ -514,12 +513,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12 contact" id="contact">
-                    
                 </div>
             </div>
 
