--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="row greenBackground">
             <div class="col-md-12 video">
-                <iframe id="youtubePlayer" src="https://www.youtube.com/embed/oQ3eYsEEmHo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe id="youtubePlayer" src="https://www.youtube.com/embed/GvxqzZJsVsM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <a class="nav-item" href="https://pay.hotmart.com/L14715581R?checkoutMode=0&bid=1595008160663" target="external"><button type="button" class="btn btn-primary" id="video-btn">QUERO ME INSCREVER</button></a>
                     <div class="row">
                         <div class="col-md-3 benefits">
