--- a/index.html
+++ b/index.html
@@ -14,22 +14,31 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row headerLogo">
-            <nav class="navbar navbar-expand-md fixed-top">
-                <div class="col-md-6">
-                    <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Logo do Descomplica QGIS"
-                            id="logoDescomplicaQGIS"></a>
-                </div>
-                <div class="col-md-6">
-                    <ul class="navbar-nav mr-auto menu">
-                        <li><a class="nav-item" href="#">Home</a></li>
-                        <li><a class="nav-item" href="#estrutura">Estrutura do Curso</a></li>
-                        <li><a class="nav-item" href="#instrutor">Instrutor</a></li>
-                        <li><a class="nav-item" href="#faq">Perguntas Frequentes</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="index.html">
+                <img src="img/logo.png" height="50" alt="Logo do Descomplica QGIS" loading="lazy">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+                aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#estrutura">Estrutura do Curso</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#instrutor">Instrutor</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#faq">Perguntas Frequentes</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
 
         <div class="row">
             <div class="col-md-12" id="bannerInicial">
